// Vitest Snapshot v1

exports[`FileInput.vue > renders OXD FileInput 1`] = `
"<input type=\\"file\\" class=\\"oxd-file-input\\" data-v-1b4b6e0f=\\"\\">
<div class=\\"oxd-file-div oxd-file-div--active\\" data-v-1b4b6e0f=\\"\\">
  <!--v-if-->
  <div class=\\"oxd-file-input-div\\" data-v-1b4b6e0f=\\"\\">No file chosen</div><i class=\\"oxd-icon bi-upload oxd-file-input-icon\\" data-v-85cde8ca=\\"\\" data-v-1b4b6e0f=\\"\\"></i>
</div>"
`;

exports[`FileInput.vue > should renders OXD FileInput with browse button 1`] = `
"<input type=\\"file\\" class=\\"oxd-file-input\\" data-v-1b4b6e0f=\\"\\">
<div class=\\"oxd-file-div oxd-file-div--active\\" data-v-1b4b6e0f=\\"\\">
  <div class=\\"oxd-file-button\\" data-v-1b4b6e0f=\\"\\">Browse</div>
  <div class=\\"oxd-file-input-div\\" data-v-1b4b6e0f=\\"\\">No file chosen</div><i class=\\"oxd-icon bi-upload oxd-file-input-icon\\" data-v-85cde8ca=\\"\\" data-v-1b4b6e0f=\\"\\"></i>
</div>"
`;

exports[`FileInput.vue > should renders OXD FileInput with custom color 1`] = `
"<input type=\\"file\\" class=\\"oxd-file-input\\" data-v-1b4b6e0f=\\"\\">
<div class=\\"oxd-file-div oxd-file-div--active\\" style=\\"background-color: aliceblue;\\" data-v-1b4b6e0f=\\"\\">
  <!--v-if-->
  <div class=\\"oxd-file-input-div\\" data-v-1b4b6e0f=\\"\\">No file chosen</div><i class=\\"oxd-icon bi-upload oxd-file-input-icon\\" data-v-85cde8ca=\\"\\" data-v-1b4b6e0f=\\"\\"></i>
</div>"
`;

exports[`FileInput.vue > should renders OXD FileInput with error 1`] = `
"<input type=\\"file\\" class=\\"oxd-file-input\\" data-v-1b4b6e0f=\\"\\">
<div class=\\"oxd-file-div oxd-file-div--active oxd-file-div--error\\" data-v-1b4b6e0f=\\"\\">
  <!--v-if-->
  <div class=\\"oxd-file-input-div\\" data-v-1b4b6e0f=\\"\\">No file chosen</div><i class=\\"oxd-icon bi-upload oxd-file-input-icon\\" data-v-85cde8ca=\\"\\" data-v-1b4b6e0f=\\"\\"></i>
</div>"
`;
